# SuperOutfit

./: .gitignore  .mcp.json.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLI.md  LICENSE  MCP_SETUP.md  PROSPECTUS.md  README.md  SKILL.md  SuperOutfit.spec  build.py  build_ui.py  export.py  gateway.py  install_skill.py  pyproject.toml  server.py  setup.py  superoutfit.py
api/: main.py
data/: .gitkeep
data/wishlist/: wish_001.yaml
docs/: BUILD.md  INSTALL.md  PROSPECTUS.md  architecture.md  technical.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: manifest.json  sw.js
frontend/src/: App.vue
references/: SOURCES.md  accessories.md  area_weighting.md  buying.md  care.md  color.md  color_pipeline.md  color_theory.md  layering.md  mistakes.md  occasion.md  shoes.md  silhouette.md  style_archetypes.md  wardrobe.md
scripts/: color_inverse.py  color_inverse_bayesian.py  color_inverse_global.py  color_math.py  color_show.py  completions.py  config.py  data_manager.py  errors.py  export.py  format.py  init_data.py  init_guide.py  install-simple.ps1  install.ps1  install.sh  install_skill.py  like_based_scoring.py  output.py  paths.py  scorer.py  scrape_palettes.py  scrape_wxsecai.py  setup_skill.py  stats.py  today.py  train_color_model.py  tui.py  uninstall_skill.py  wardrobe_ops.py  wear.py  weather.py
scripts/templates/: item_template.yaml  outfit_template.yaml  profile_template.yaml
superoutfit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templates/: item_template.yaml
(+24 files in other folders)
